# search-engine

./: CMakeLists.txt  README.md
data/: doc1.txt  doc2.txt  doc3.txt  file3.txt
include/: indexer.h  searcher.h
src/: indexer.cpp  main  main.cpp  searcher.cpp
